updated server/puzzles.js to use await

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
   "presets": [ "es2015", "react" ],
-  "plugins": [ "transform-object-rest-spread" ],
+  "plugins": [ 
+    "transform-object-rest-spread", 
+    "syntax-async-functions" 
+  ],
   "env": {
     "development": {
       "presets": ["react-hmre"]
