--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
   },
   "dependencies": {
     "async": "^2.6.1",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "fs-extra": "^6.0.1",
     "grommet": "^1.3.4",
-    "lodash": "^4.17.10",
     "morgan": "^1.7.0",
+    "node-fetch": "^2.1.2",
     "path-to-regexp": "^1.7.0",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
@@ -39,6 +41,7 @@
     "babel-eslint": "^7.1.1",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-object-rest-spread": "^6.19.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
