--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,9 @@
   "env": {
     "development": {
       "presets": ["react-hmre"]
+    },
+    "production": {
+      "presets": ["stage-0"]
     }
   }
 }
