--- a/package.json
+++ b/package.json
@@ -39,16 +39,20 @@
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
-    "babel-core": "^6.5.2",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^7.1.1",
     "babel-jest": "^20.0.3",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^7.1.4",
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.19.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-minify": "^0.4.3",
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.18.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
