--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,14 @@
 {
-  "presets": [ "es2015", "react" ],
+  "presets": [ "es2015", "stage-0", "react" ],
   "plugins": [ 
     "transform-object-rest-spread", 
     "transform-class-properties",
+    "transform-regenerator",
     "syntax-async-functions"
   ],
   "env": {
     "development": {
       "presets": ["react-hmre"]
-    },
-    "production": {
-      "presets": ["stage-0"]
     }
   }
 }
